Fixed incorrect icon alignment when using the MP6 admin UI.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@702046 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -591,6 +591,7 @@ a.ws_button:hover {
 /* MP6 admin style compatibility */
 #ws_icon_selector .ws_icon_option .icon16::before {
 	margin: 0;
+	padding: 0;
 }
 .ws_select_icon .icon16::before {
 	padding: 0;
